[gd_scene load_steps=2 format=3 uid="uid://test_controls"]

[ext_resource type="Script" path="res://scenes/battle/ui/test_controls.gd" id="1"]

[node name="TestControls" type="Control"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -300.0
offset_right = 200.0
offset_bottom = -10.0

[node name="Label" type="Label" parent="VBox"]
layout_mode = 2
text = "Test Controls"
horizontal_alignment = 1

[node name="StartBattleButton" type="Button" parent="VBox"]
layout_mode = 2
text = "Start Battle"

[node name="EndTurnButton" type="Button" parent="VBox"]
layout_mode = 2
text = "End Turn"

[node name="DrawCardButton" type="Button" parent="VBox"]
layout_mode = 2
text = "Draw Card"

[node name="DealDamagePlayerButton" type="Button" parent="VBox"]
layout_mode = 2
text = "Damage Player (-5)"

[node name="DealDamageEnemyButton" type="Button" parent="VBox"]
layout_mode = 2
text = "Damage Enemy (-5)"

[node name="AddEnergyButton" type="Button" parent="VBox"]
layout_mode = 2
text = "Add Energy (+1)"

[node name="ResetBattleButton" type="Button" parent="VBox"]
layout_mode = 2
text = "Reset Battle"
